# Misc-C-Scripts

./: CMakeLists.txt  Makefile  main.cpp
src/C/: dynamic.c  first.c
src/CPP/: main.cpp  testing.cpp  this.cpp  this.h
